@@ -57,6 +57,7 @@ it from source control: http://www.mediawiki.org/wiki/Download_from_SVN
 * (bug 9898) Allow viewing all namespaces in Special:Newpages
 * (bug 10139) Introduce 'EditSectionLink' and 'EditSectionLinkForOther' hooks;
   see docs/hooks.txt for details
+* (bug 9769) Provide "watch this page" toggle on protection form
 
 == Bugfixes since 1.10 ==
 
